1.完成初步版本报表 2.首页完成30% 3.订单和排产页面重写，剩余部分操作未对接 4.详情页返回已解决
5.登陆未完成

--- a/app/index.less
+++ b/app/index.less
@@ -8,3 +8,20 @@
 .ant-layout-sider{
     background: #fdfbfb
 }
+.ant-tag{
+    margin-bottom: 8px;
+}
+.backup-button{
+    cursor: pointer;
+    float:right;
+    // margin-right: 30px;
+    padding: 4px;
+    border-radius: 6px;
+    color: #8f9593;
+    font-weight: bolder;
+    // font-size: 25px;
+}
+.backup-button:hover{
+    background-color: #56a1d1;
+    color: #f6f7f7;
+}
